complete part one of dahuser page dashboard part

--- a/src/dashuser.html
+++ b/src/dashuser.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script defer src="/js/dashuser.js " ></script>
     <title>user dashboard</title>
 </head>
 
 <body>
     <div class="bg-slate-50">
-        <div class="container w-11/12 mx-auto flex justify-between items-center p-5">
+        <div class="container w-10/12 mx-auto flex justify-between items-center p-5">
             <h1 class="text-2xl font-semibold text-gray-700 capitalize">user dashboard</h1>
             <div class="flex items-center gap-2">
                 <i class="fa-solid fa-house text-gray-500 cursor-pointer"></i>
@@ -24,14 +25,14 @@
             </div>
         </div>
     </div>
-    <section class="dash-user container w-11/12 mx-auto p-5 grid grid-cols-4 gap-5">
-        <div class="pro-file col-span-1 bg-gray-50 ">
+    <section class="dash-user container w-10/12 mx-auto py-12 grid grid-cols-4 gap-5">
+        <div class="pro-file col-span-1 bg-gray-50 h-fit pb-3 rounded-b-lg">
             <div class="inside-profil ">
                 <div class="info text-center">
-                    <img src="/img/dashuser/10001.jpg" alt="">
+                    <img class="rounded-lg rounded-b-none "  src="/img/dashuser/10001.jpg" alt="">
                     <!-- info user img -->
-                    <div class="info-user p-4">
-                       <div class="border-b-[1px] border-gray-200 pb-2" >
+                    <div class="info-user p-4 h-40">
+                       <div class="border-b-[1px] border-gray-200 pb-2 relative  top-1/5 left-1/2 -translate-x-1/2 -translate-y-1/2" >
                         <img class="w-36 h-36 rounded-full shadow-lg mx-auto mb-2 border-white border-8" src="/img/dashuser/10002.jpg" alt="">
                         <h1 class="font-bold text-gray-800 text-2xl" >Vicki E. Pope</h1>
                         <h2 class="text-gray-500">vicki.pope@gmail.com
@@ -41,31 +42,31 @@
                 </div>
 
                 <ul class="tools" >
-                    <li class="flex items-center gap-3 text-gray-600 px-4 py-2 text-lg">
+                    <li class="relative flex items-center gap-3 text-gray-600 px-4 py-2 text-lg active cursor-pointer">
                         <i class="fa-solid fa-house"></i>
                         <h2>dashboard</h2>
                     </li>
-                    <li class="flex items-center gap-3 text-gray-600 px-4 py-2 text-lg">
+                    <li class="relative flex items-center gap-3 text-gray-600 px-4 py-2 text-lg cursor-pointer">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <h2>order</h2>
                     </li>
-                    <li class="flex items-center gap-3 text-gray-600 px-4 py-2 text-lg">
+                    <li class="relative flex items-center gap-3 text-gray-600 px-4 py-2 text-lg cursor-pointer">
                         <i class="fa-regular fa-heart"></i>
                         <h2>wishlist</h2>
                     </li>
-                    <li class="flex items-center gap-3 text-gray-600 px-4 py-2 text-lg">
+                    <li class="relative flex items-center gap-3 text-gray-600 px-4 py-2 text-lg cursor-pointer">
                         <i class="fa-regular fa-credit-card"></i>
                         <h2>saved card</h2>
                     </li>
-                    <li class="flex items-center gap-3 text-gray-600 px-4 py-2 text-lg">
+                    <li class="relative flex items-center gap-3 text-gray-600 px-4 py-2 text-lg cursor-pointer">
                         <i class="fa-solid fa-location-dot"></i>
                         <h2>address</h2>
                     </li>
-                    <li class="flex items-center gap-3 text-gray-600 px-4 py-2 text-lg">
+                    <li class="relative flex items-center gap-3 text-gray-600 px-4 py-2 text-lg cursor-pointer">
                         <i class="fa-regular fa-user"></i>
                         <h2>profile</h2>
                     </li>
-                    <li class="flex items-center gap-3 text-gray-600 px-4 py-2 text-lg active">
+                    <li class="relative flex items-center gap-3 text-gray-600 px-4 py-2 text-lg cursor-pointer">
                         <i class="fa-solid fa-shield-halved"></i>
                         <h2>privacy</h2>
                     </li>
