--- a/src/dashuser.html
+++ b/src/dashuser.html
@@ -15,10 +15,10 @@
     <title>user dashboard</title>
 </head>
 
-<body class='' >
+<body class='relative' >
     <div class="bg-slate-50">
         <div class="container w-10/12 mx-auto flex justify-between items-center p-5">
-            <h1 class="text-2xl font-semibold text-gray-700 capitalize">user dashboard</h1>
+            <h1 class="sm:text-2xl font-semibold text-gray-700 capitalize">user dashboard</h1>
             <div class="flex items-center gap-2">
                 <i class="fa-solid fa-house text-gray-500 cursor-pointer"></i>
                 <i class="fa-solid fa-chevron-right text-gray-500"></i>
@@ -26,11 +26,11 @@
             </div>
         </div>
     </div>
-    <section class="dash-user container w-10/12 mx-auto py-12 grid grid-cols-4 gap-5">
+    <section class="dash-user container w-10/12 mx-auto py-12 grid grid-cols-1 lg:grid-cols-4 lg:gap-5">
         <div class="pro-file col-span-1 bg-gray-50 h-fit pb-3 rounded-b-lg">
-            <div class="inside-profil ">
+            <div class="inside-profil absolute z-[11] bg-gray-50 shadow-md xl:shadow-none w-[320px] top-0 left-0 xl:w-full h-full xl:relative">
                 <div class="info text-center">
-                    <img class="rounded-lg rounded-b-none h-40 w-full " src="/img/dashuser/10001.jpg" alt="">
+                    <img class="xl:rounded-lg rounded-b-none h-40 w-full " src="/img/dashuser/10001.jpg" alt="">
                     <!-- info user img -->
                     <div class="info-user p-4 h-40">
                         <div
@@ -91,7 +91,7 @@
                 <p class="text-gray-500 text-[15.5px] mb-8">From your My Account Dashboard you have the ability to view
                     a snapshot of your recent account
                     activity and update your account information. Select a link below to view or edit information.</p>
-                <div class="boxes flex items-center justify-between gap-6 mb-8">
+                <div class="boxes grid grid-cols-1 gap-6 sm:grid-cols-2  md:flex sm:items-center sm:justify-between sm:gap-6 sm:mb-8">
                     <!-- box  -->
                     <div class="relative overflow-hidden box flex items-center p-5 rounded-lg bg-white w-full s-h">
                         <img class="w-16" src="/img/dashuser/10003.svg" alt="">
@@ -131,9 +131,9 @@
                     </div>
                 </div>
                 <!-- last part -->
-                <div class="last-part">
+                <div class="last-part mt-6">
                     <h1 class="text-xl font-medium mb-6">Account Information</h1>
-                    <div class="info-1 flex items-start justify-between gap-5">
+                    <div class="info-1 grid grid-cols-1 md:flex md:items-start md:justify-between gap-5">
                         <!-- div1 -->
                         <div class="d1 w-full">
                             <div class="i1 flex items-center justify-between py-1 border-b-[1px] border-gray-200">
@@ -158,12 +158,12 @@
                     </div>
                     <!-- next step -->
 
-                    <div class="d2 w-full">
+                    <div class="d2 w-full mt-6">
                         <div class="i2 flex items-center justify-between w-full py-1 border-b-[1px] border-gray-200">
                             <h1 class="text-lg text-gray-800">Address Book </h1>
                             <span class="text-[#0da487] capitalize cursor-pointer" id="edit">edit</span>
                         </div>
-                        <div class="flex justify-between items-center">
+                        <div class="grid-cols-1 md:flex md:justify-between md:items-center">
                             <div class="w-full text-gray-500 py-3 flex flex-col gap-2 text-sm">
                                 <span>Default Billing Address</span>
                                 <span>You have not set a default billing address.</span>
@@ -182,7 +182,7 @@
         </div>
     </section>
     <!-- forms  -->
-<div class="myforms absolute left-1/2 top-1/2 bg-white -translate-x-1/2 -translate-y-[60%] z-[111] w-[50%] p-4 rounded-md opacity-0">
+<div class="flex-none myforms absolute left-1/2 top-1/2 bg-white -translate-x-1/2 -translate-y-[60%] z-[-1] w-[50%] p-4 rounded-md opacity-0 ">
     <button class="text-white font-bold py-[7px] cursor-pointer px-3 bg-[#0da487] rounded-md absolute -right-3 -top-3" id="close" >x</button>
     <div class=" ">
       <h2 class="text-start text-xl font-bold leading-9 tracking-tight text-gray-800 mb-8">edit profile</h2>
