--- a/src/dashuser.html
+++ b/src/dashuser.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <section class="dash-user container w-10/12 mx-auto py-12 grid grid-cols-1 lg:grid-cols-4 lg:gap-5">
-        <button class="btn" >show more</button>
+        <button class="btn top" >show more</button>
         <div class="pro-file col-span-1  pb-3 rounded-b-lg fixed z-[11] bg-gray-50 shadow-md xl:shadow-none w-[320px] top-0 left-[-320px] lg:left-0 lg:w-full h-full lg:relative lg:z-0">
             <div class="inside-profil ">
                 <div class="info text-center">
@@ -185,7 +185,7 @@
         </div>
     </section>
     <!-- forms  -->
-<div class="flex-none myforms absolute left-1/2 top-1/2 bg-white -translate-x-1/2 -translate-y-[60%] w-[50%] p-4 rounded-md opacity-0 z-[11]">
+<div class="flex-none myforms w-full h-full fixed  xl:left-1/2  -top-1/5 xl:top-1/2 bg-white xl:-translate-x-1/2 xl:-translate-y-[60%] xl:w-[50%] p-4 rounded-md opacity-0 z-[11] translate-x-0 translate-y-1/2">
     <button class="text-white font-bold py-[7px] cursor-pointer px-3 bg-[#0da487] rounded-md absolute -right-3 -top-3" id="close" >x</button>
     <div class=" ">
       <h2 class="text-start text-xl font-bold leading-9 tracking-tight text-gray-800 mb-8">edit profile</h2>
