complete some changes

--- a/src/dashuser.html
+++ b/src/dashuser.html
@@ -186,7 +186,7 @@
     </section>
     <!-- forms  -->
     <!-- after test set hidden w-full h-full please  -->
-<div class="myforms fixed hidden w-full h-full  left-0 top-0 bg-white px-[1rem] z-11 xl:w-1/2 xl:h-5/6 xl:top-1/2 xl:left-1/2 xl:-translate-x-1/2 xl:-translate-y-1/2 ">
+<div class="myforms fixed hidden w-full h-full  left-0 top-0 bg-white px-[1rem] z-[11] xl:w-1/2 xl:h-5/6 xl:top-1/2 xl:left-1/2 xl:-translate-x-1/2 xl:-translate-y-1/2 ">
     <div class="flex items-center justify-between mb-8 py-2">
       <h2 class="text-start text-xl font-bold leading-9 tracking-tight text-gray-800">edit profile</h2>
       <button class="text-white font-bold py-[7px] cursor-pointer px-3 bg-[#0da487] rounded-md -right-3 -top-3" id="close" >x</button>
