complete dashboard page now

--- a/src/dashuser.html
+++ b/src/dashuser.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div>
-                    <ul class="tools h-[308px] overflow-hidden overflow-y-visible lg:h-full lg:overflow-visible">
+                    <ul class="tools  lg:h-full lg:overflow-visible">
                         <li class="relative flex items-center gap-3 text-gray-600 px-4 py-4 text-lg active cursor-pointer ">
                             <i class="fa-solid fa-house"></i>
                             <h2>dashboard</h2>
